--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.6.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
