--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
